src/test/ui/consts/const-eval/const-eval-overflow-2.stderr
error: could not evaluate constant pattern
  --> $DIR/const-eval-overflow-2.rs:15:9
   |
LL |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: aborting due to previous error

